[package]
name = "archipelago-arkham-horror-lcg-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
tokio = { version = "1.0", features = ["rt", "macros"] }
tokio-tungstenite = "0.17" 
tungstenite = "0.17"
anyhow = "1.0"
